upping permgen for ant